force-app/main/default/objects/Milestone1_Project__c/fields/Number_of_Incomplete_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Incomplete_Milestones__c</fullName>
    <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
    <label>Number of Incomplete Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>