force-app/main/default/objects/Milestone1_Project__c/fields/Number_of_Incomplete_Top_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
    <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
    <label>Number of Incomplete Top Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>