force-app/main/default/objects/Milestone1_Project__c/fields/Status_Image_OpenVComplete__c.field-meta.xml
<CustomField>
    <fullName>Status_Image_OpenVComplete__c</fullName>
    <formula>IF( Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open vs. Complete Tasks (chart) - Deprec</label>
    <type>Text</type>
</CustomField>