force-app/main/default/objects/Milestone1_Project__c/fields/Status_Img_OpenLateBlocked__c.field-meta.xml
<CustomField>
    <fullName>Status_Img_OpenLateBlocked__c</fullName>
    <formula>IMAGE( Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
    <type>Text</type>
</CustomField>