force-app/main/default/objects/Milestone1_Project__c/fields/Status_TasksOpenComplete__c.field-meta.xml
<CustomField>
    <fullName>Status_TasksOpenComplete__c</fullName>
    <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open vs. Complete Tasks - Deprecated</label>
    <type>Text</type>
</CustomField>