force-app/main/default/objects/Milestone1_Project__c/fields/Total_Complete_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Complete_Task_Count__c</fullName>
    <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
    <label>Total Complete Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>