force-app/main/default/objects/Milestone1_Project__c/fields/Total_Expense_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total expense budget for this project.</inlineHelpText>
    <label>Total Expense Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>