force-app/main/default/objects/Milestone1_Project__c/fields/Total_Late_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Late_Task_Count__c</fullName>
    <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
    <label>Total Late Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>