force-app/main/default/objects/Milestone1_Project__c/fields/Total_Open_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Task_Count__c</fullName>
    <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
    <label>Total Open Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>