force-app/main/default/objects/Milestone1_Project__c/validationRules/Kickoff_before_deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Kickoff_before_deadline</fullName>
    <active>false</active>
    <description>Kickoff must be less or equal than the deadline</description>
    <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Deadline__c)) &amp;&amp; Deadline__c &lt; Kickoff__c</errorConditionFormula>
    <errorDisplayField>Kickoff__c</errorDisplayField>
    <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
</ValidationRule>