force-app/main/default/objects/Milestone1_Project__c/validationRules/Total_Expense_Budget_Negative_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Expense_Budget_Negative_Numbers</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Expense_Budget__c</errorDisplayField>
    <errorMessage>This value should be a positive number</errorMessage>
</ValidationRule>